--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                   <li class="page-item"><a class="page-link" href="#">2</a></li>
                   <li class="page-item"><a class="page-link" href="#">3</a></li>
                   <li class="page-item"><a class="page-link" href="#">4</a></li>
-                  <li class="page-item ellipsis"><i class="fa fa-ellipsis-h" aria-hidden="true"></i></li>
+                  <li class="page-item"><a class="page-link ellipsis" href="#"><i class="fa fa-ellipsis-h" aria-hidden="true"></i></li></a></li>
                   <li class="page-item "><a class="page-link" href="#">10</a></li>
                   <li class="page-item">
                     <a class="page-link" href="#"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
